<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorPrimary"
            android:elevation="?elevation"
            android:theme="?actionBarStyle" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/loading_details_pb"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_gravity="center"
                android:layout_marginEnd="96dp"
                android:layout_marginStart="96dp"
                android:indeterminate="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/error_details_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/error_details"
                android:textSize="20sp"
                android:visibility="invisible" />

            <ScrollView
                android:id="@+id/details_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/topContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/movie_title_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@android:color/white"
                            android:textSize="36sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/dummy_text" />

                        <TextView
                            android:id="@+id/original_title_label_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/original_title_label"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="@+id/movie_title_tv"
                            app:layout_constraintTop_toBottomOf="@+id/movie_title_tv" />

                        <TextView
                            android:id="@+id/original_title_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp"
                            app:layout_constraintBaseline_toBaselineOf="@+id/original_title_label_tv"
                            app:layout_constraintStart_toEndOf="@+id/original_title_label_tv"
                            tools:text="@string/dummy_text" />

                        <TextView
                            android:id="@+id/movie_info_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="@+id/original_title_label_tv"
                            app:layout_constraintTop_toBottomOf="@+id/original_title_label_tv"
                            tools:text="@string/dummy_text" />

                        <View
                            android:id="@+id/line"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginTop="16dp"
                            android:background="@color/colorAccent"
                            app:layout_constraintTop_toBottomOf="@+id/movie_info_tv" />

                        <android.support.v7.widget.CardView
                            android:id="@+id/frameLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:foreground="@drawable/touch_selector"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/line"
                            card_view:cardCornerRadius="8dp"
                            card_view:cardElevation="4dp"
                            card_view:cardUseCompatPadding="true">

                            <ImageView
                                android:id="@+id/movie_pic_iv"
                                android:layout_width="150dp"
                                android:layout_height="match_parent"
                                android:adjustViewBounds="true"
                                android:scaleType="centerCrop"
                                tools:src="@drawable/ic_placeholder"
                                android:contentDescription="@string/desc_poster" />
                        </android.support.v7.widget.CardView>

                        <TextView
                            android:id="@+id/plot_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="6dp"
                            android:lineSpacingExtra="2sp"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/frameLayout"
                            app:layout_constraintTop_toTopOf="@+id/frameLayout"
                            tools:text="@string/dummy_text" />

                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/ratingContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp">

                        <android.support.constraint.Guideline
                            android:id="@+id/guideline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.50" />

                        <ImageView
                            android:id="@+id/star_iv"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/ic_star"
                            app:layout_constraintEnd_toStartOf="@id/guideline"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/desc_rating" />

                        <TextView
                            android:id="@+id/tmdb_rating_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toStartOf="@+id/guideline"
                            app:layout_constraintHorizontal_bias="0.42"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/star_iv"
                            tools:text="7.0" />

                        <TextView
                            android:id="@+id/rating_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/rating_of_ten"
                            android:textColor="@android:color/white"
                            android:textSize="14sp"
                            app:layout_constraintBaseline_toBaselineOf="@+id/tmdb_rating_tv"
                            app:layout_constraintStart_toEndOf="@+id/tmdb_rating_tv"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/votes_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:text="@string/votes_title"
                            app:layout_constraintBottom_toBottomOf="@+id/star_iv"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/guideline" />

                        <TextView
                            android:id="@+id/tmdb_votes_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-medium"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            app:layout_constraintBaseline_toBaselineOf="@+id/tmdb_rating_tv"
                            app:layout_constraintEnd_toEndOf="@+id/votes_tv"
                            app:layout_constraintStart_toStartOf="@+id/votes_tv"
                            tools:text="15,972" />
                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
</layout>